Fix some minor bugs
1. wrong imports in GalleryComponent causing images not being loaded
   by webpack
2. always show scrollbar in sidenav to avoid some flickering issues
   on certain screen height

--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -130,7 +130,7 @@
 }
 
 .sidenav__content {
-  overflow-y: auto;
+  overflow-y: scroll;
   flex: 1;
   min-height: 0;
 }
